--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
             </li> -->
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search scholarships" aria-label="Search">
             <button class="btn btn-danger my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
@@ -79,6 +79,41 @@
           <label for="formGroupExampleInput2">Year of study</label>
           <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Enter year of study">
         </div>
+        <div class="form-group" style="width: 50%;">
+          <label for="inputState">State</label>
+          <select id="inputState" class="form-control">
+            <option selected>Choose...</option>
+            <!-- <option>Andhra Pradesh</option> -->
+            <option>Arunachal Pradesh</option>
+            <option>Assam</option>
+            <option>Bihar</option>
+            <option>Chhattisgarh</option>
+            <option>Goa</option>
+            <option>Gujarat</option>
+            <option>Haryana</option>
+            <option>Himachal Pradesh</option>
+            <option>Jharkhand</option>
+            <option>Karnataka</option>
+            <option>Kerala</option>
+            <option>Madhya Pradesh</option>
+            <option>Maharashtra</option>
+            <option>Manipur</option>
+            <option>Meghalaya</option>
+            <option>Mizoram</option>
+            <option>Nagaland</option>
+            <option>Odisha</option>
+            <option>Punjab</option>
+            <option>Rajasthan</option>
+            <option>Sikkim</option>
+            <option>Tamil Nadu</option>
+            <option>Telangana</option>
+            <option>Tripura</option>
+            <option>Uttar Pradesh</option>
+            <option>Uttarakhand</option>
+            <option>West Bengal</option>
+
+          </select>
+        </div>
       </form>
     </div>
 
@@ -104,10 +139,9 @@
             <label for="formGroupExampleInput2">Mother's occupation</label>
             <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Enter mother's occupation">
           </div>
-
       </div>
     </div>
-
+      <div style="height:20px;"></div>
       <div class="find-btn">
         <a href="list.html"><button class="btn btn-primary" type="button">Find scholarships</button></a>
       </div>
